working slide up

--- a/toast.html
+++ b/toast.html
@@ -72,5 +72,41 @@
       <div class="progress active"></div>
   </div>
 
+  <br>
+  <br>
+  <br>
+  <br>
+
+  <h1>Accept/Deny</h1>
+  <div class="toast">
+    <i class="close"></i>
+    <div class="toast-content">
+      <i class="phone"></i>
+      <div class="message">
+        <span class="text subtitle">Incoming call</span>
+      </div>
+      <button class="acceptBtn"><i class="success"></i></button>
+      <button class="denyBtn"><i class="fail"></i></button>
+    </div>
+    <div class="progress active"></div>
+  </div>
+  
+
+  <br><br><br><br>
+
+  <h1>Retry</h1>
+  <div class="toast">
+    <i class="close"></i>
+    <div class="toast-content">
+      <i class="danger"></i>
+      <div class="message">
+        <span class="text subtitle">Lost Connection</span>
+      </div>
+      <button class="retryBtn">
+        <i class="retry"></i>
+      </button>
+    </div>
+  </div>
+
 </body>
 </html>
