--- a/toast.html
+++ b/toast.html
@@ -74,7 +74,6 @@
     <div class="item">
       <h3>Accept/Deny</h3>
       <div class="toast" style="position: relative;">
-        <i class="close"></i>
         <div class="toast-content">
           <i class="phone"></i>
           <div class="message">
@@ -111,7 +110,6 @@
     <div class="item">
       <h3>Don't show again</h3>
       <div class="toast" style="position: relative;">
-        <i class="close"></i>
         <div class="toast-content">
           <i class="danger"></i>
           <div class="message">
@@ -119,6 +117,10 @@
           </div>
           <button class="acceptBtn"><i class="success"></i></button>
           <button class="denyBtn"><i class="fail"></i></button>
+        </div>
+        <div>
+          <input id="againInput" type="checkbox">
+          <label for="againInput">Don't show again</label>
         </div>
       </div>
     </div>
